clang/test/BSC/Negative/SafeZone/array_subscript_raw_pointer/array_subscript_raw_pointer_disabled.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe void test(void) {
    int a = 0;
    int* ptr = _Unsafe(&a);

    // Both of these should be allowed when feature is disabled
    *ptr = 1;   // expected-error {{'*' operator is forbidden in the safe zone}}
    ptr[0] = 1; // ok
}

// Test that array access syntax is also allowed for reading
_Safe void test2(void) {
    int arr[10] = {0};
    int* ptr = _Unsafe(&arr[0]);

    int val1 = *ptr;   // expected-error {{'*' operator is forbidden in the safe zone}}
    int val2 = ptr[0]; // ok
    int val3 = ptr[5]; // ok
}
